Page MenuHome GnuPG

pinentry-qt: Icons on buttons are hardly visible with dark high contrast modes
Closed, ResolvedPublic

Description

The icons on the Show/Hide Password button and the Generate button are hardly visible with dark high contrast modes.

For the Qt 6-based pinentry this has been fixed with T7230.

Details

Version
Gpg4win-4.4.2-beta10 (self-built)

Event Timeline

ebo triaged this task as Normal priority.Jul 24 2025, 11:13 AM
ebo added a project: vsd34.
ikloecker changed the task status from Open to Testing.Jul 24 2025, 2:00 PM
ikloecker moved this task from Backlog to WIP on the vsd34 board.

This has been fixed in pinentry-qt5 (which is used by VSD 3.x).

ikloecker mentioned this in Unknown Object (Maniphest Task).Jul 28 2025, 9:59 AM

Looks good to me on GnuPG-VS-Desktop-3.3.90.8-Beta-Standard.msi (3.3.3 betaversion) @ win10

nr.1
nr.2
schwarz
weiß
timegrid edited projects, added vsd33 (vsd-3.3.3); removed vsd33.

Well, the icons look good to me now on vsd-3.4.0-beta1294, but there's a regression for the borders, for which i'll create another ticket:

win10

nr.1
nr.2
schwarz
weiß

win11

aquatic
desert
dusk
night sky
timegrid edited projects, added vsd34 (vsd-3.4.0); removed vsd34.